# angka

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  gtkinclude.txt
docs/: Doxyfile  conf.py  doxygen_log.txt  index.rst
docs/doxs/: 00_main.dox  00_main.md  01_getting_started.dox  02_compile.dox  03_vector.dox  04_matrix.dox  05_visual.dox  06_to_python.dox
docs/html/: angka_8h.html  angka_8h_source.html  angkavisual_8h.html  angkavisual_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_a8827457ebeb086390fb4fa37254604a.html  dir_a8827457ebeb086390fb4fa37254604a.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e18029312f1b2a531b1b1c9053a92cc0.html  dir_e18029312f1b2a531b1b1c9053a92cc0.js  doxygen.css  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  init_8h.html  init_8h.js  init_8h_source.html  matrix_8h.html  matrix_8h.js  matrix_8h_source.html  menudata.js  navtree.css  navtreedata.js  navtreeindex0.js  plot_8h.html  plot_8h.js  plot_8h_source.html  standard_8h.html  standard_8h.js  (+22 more)
docs/latex/: angka_8h.tex  angkavisual_8h.tex  annotated.tex  dir_a8827457ebeb086390fb4fa37254604a.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_e18029312f1b2a531b1b1c9053a92cc0.tex  files.tex  init_8h.tex  matrix_8h.tex  plot_8h.tex  refman.tex  standard_8h.tex  structs__canvas.tex  structs__color.tex  structs__coord__double.tex  structs__coord__int.tex  structs__figure.tex  structs__matrix.tex  structs__plot__data.tex  structs__slice.tex  structs__vector.tex  vector_8h.tex
docs/pages/: 000_about.rst  002_angka-main.rst  003_angka-visual.rst  004_angka-in-c.rst  005_angka-to-python.rst  006_develop-angka.rst
docs/sphinx/: conf.py  git-log.sh  index.rst
docs/xml/: angka_8h.xml  angkavisual_8h.xml  dir_a8827457ebeb086390fb4fa37254604a.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_e18029312f1b2a531b1b1c9053a92cc0.xml  index.xml  init_8h.xml  matrix_8h.xml  plot_8h.xml  standard_8h.xml  structs__canvas.xml  structs__color.xml  structs__coord__double.xml  structs__coord__int.xml  structs__figure.xml  structs__matrix.xml  structs__plot__data.xml  structs__slice.xml  structs__vector.xml  vector_8h.xml
include/: agv.h  agx.h  angka.h  grid.h  init.h  matrix.h  picture.h  standard.h  vector.h  visual.h
python/: base.i  numpy.i
python/setup/: MANIFEST.in
src/: grid.c  init.c  matrix.c  standard.c  vector.c
src/core/: grid.c  init.c  matrix.c  standard.c  vector.c
src/visual/: picture.c  visual.c
swig/: Makefile  angka.i  angka.py  angka_wrap.c
swig [deprecated]/python/: angka.i  vector.i
swig/angkapy/: README.md  setup.cfg
swig/python/: Makefile  angka.i  base.i  matrix.i  plot.i  vector.i  visual.i
swig/python/py38/: BUILD  LICENSE  MANIFEST.in  setup.cfg
swig/python/py38/src/angka/: angka.py
tests/getting_started/: Makefile  create_a_matrix.c  create_a_vector.c  show_a_matrix.c  show_a_plot.c
tests/test_matrix/: Makefile  main_1.c  main_2.c  test_matrix_1.c  test_matrix_2.c  test_matrix_3.c  (+1 more)
visual/: Makefile
(+73 files in other folders)
