[metadata]
name = angka
version = 0.0.3
author = Yudha Styawan
author_email = yudhastyawan@gmail.com
description = a library for data manipulation and visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yudhastyawan/angka
project_urls =
    Bug Tracker = https://github.com/yudhastyawan/angka/issues
    Documentation = http://angka.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = src

[bdist_wheel]
python-tag = py38
plat-name = win_amd64